# starter-python-api

./: .env.example  .gitignore  CLAUDE.md  README.md  auth.py  build.js  database.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-auth.txt  requirements-dev.txt  requirements.txt  venv.py
.claude-task-f3c6a34f-54f5-44f9-99c5-ff523f8e4325/: .claude.json  .credentials.json
.claude-task-f3c6a34f-54f5-44f9-99c5-ff523f8e4325/backups/: .claude.json.backup.1776727660723
.claude-task-f3c6a34f-54f5-44f9-99c5-ff523f8e4325/projects/-home-rsi-rsi-worktrees-5b0cf9ac/: 3218b463-151b-4288-a248-6c86ecd3a2bc.jsonl
.claude-task-f3c6a34f-54f5-44f9-99c5-ff523f8e4325/sessions/: 990781.json
.claude-task-fc82e5c4-31fb-4bf2-84f2-7fc8eefaaec4/: .claude.json
.claude-task-fc82e5c4-31fb-4bf2-84f2-7fc8eefaaec4/backups/: .claude.json.backup.1775171428510
.claude-task-fc82e5c4-31fb-4bf2-84f2-7fc8eefaaec4/plugins/: blocklist.json
.claude-task-fc82e5c4-31fb-4bf2-84f2-7fc8eefaaec4/projects/-home-rsi-rsi-worktrees-859fa087/: 1a7c1d17-1ef1-49b1-b475-f2e5c2414138.jsonl
.claude-task-fc82e5c4-31fb-4bf2-84f2-7fc8eefaaec4/sessions/: 1304805.json
.rsi/: frozen-probes-fbcc30b5-9cab-46c9-9784-fec828a7c6dd.json  probe-baseline-74c3bdc1-b2cd-4cee-9899-a21ff9955be5.json
middleware/: request_logging.py  security_headers.py
routes/: __init__.py  items.py  notify.py  todos.py
tests/: conftest.py  test_auth.py  test_auth_routes.py  test_database.py  test_database_integration.py  test_items.py  test_logging.py  test_main.py  test_middleware.py  test_settings.py
(+2 files in other folders)
