[project]
name = "fastapi-starter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.12.0",
    "bcrypt>=5.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.0",
    "pip-audit>=2.0.0",
]
